fix css for panels overflow-y scroll

--- a/src/components/Items.module.css
+++ b/src/components/Items.module.css
@@ -6,8 +6,6 @@
   background: gray93;
   position: relative;
   max-height: 100%;
-  overflow-y: auto;
-  padding-bottom: 1em;
 }
 
 .header {
@@ -33,4 +31,13 @@
 .fadeActiveExit {
   opacity: .01;
   transition: opacity .2s;
+}
+
+.wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
 }
