--- a/src/components/utils/Pager.module.css
+++ b/src/components/utils/Pager.module.css
@@ -1,5 +1,5 @@
 .pager {
-  padding: 2em 1em 0;
+  padding: 2em 1em 1em;
   display: flex;
 }
 
